# RM_Vision_Learning_Notes

./: .gitignore  README.md  temp_file
.marscode/: deviceInfo.json
Math_fountation/: README.md  矩阵左乘右乘.md
cpp_bits_and_pieces/: README.md  readme.md
cpp_bits_and_pieces/1_类与对象深度/: 1_特殊成员函数.cpp  2_静态成员.cpp  3_多态与虚函数.cpp  4_继承与访问控制.cpp  5_委托构造.cpp  6_explicit与类型转换.cpp  7_const成员函数.cpp  8_noexcept与异常安全.cpp  readme.md
cpp_bits_and_pieces/4_智能指针/: 1_unique_ptr.cpp  2_shared_ptr.cpp  3_weak_ptr.cpp  4_循环引用问题.cpp  5_自定义删除器.cpp  6_enable_shared_from_this.cpp  readme.md
cpp_bits_and_pieces/functional/: bind.cpp  function.cpp
cpp_bits_and_pieces/完美转发/: _1问题场景.cpp  _2引用折叠.cpp  _3完美转发.cpp
cpp_bits_and_pieces/智能指针/: 1_shared_ptr.cpp  2_unique_ptr.cpp  3_weak_ptr.cpp  4_make_shared.cpp  5_make_unique.cpp
cpp_bits_and_pieces/移动语义/: _1拷贝场景.cpp  _2右值引用.cpp  _3资源转移.cpp
cpp_bits_and_pieces/类/: 类的特殊成员函数.cpp  静态成员函数与变量.cpp
cpp_bits_and_pieces/类的特殊成员函数/: 类的特殊成员函数.cpp
task001_苹果魔方识别/苹果/: apple_detection.cpp
task002_大符kalman/: CMakeLists.txt
task004_装甲板识别/: main.cpp
task005_大恒相机驱动/: CMakeLists.txt  main.cpp
task006_CMAKELISTS_TXT/: CMakeLists.txt  calculate.cpp
task007_yaml/: CMakeLists.txt  config.yaml  main.cpp  yaml.md
task008_Markdown/: 1_Markdown.md  2_LaTeX.md
task009_人工神经元/: dots.yaml  main1_随机梯度下降.cpp  main2_批量梯度下降.cpp  main3_小批量梯度下降.cpp  note.md
task012_ros2/1_话题通讯/: demo01_talker_str.cpp  demo02_listener_str.cpp  demo03_talker_stu.cpp  demo04_listener_stu.cpp
task012_ros2/_1.创建节点/: CMakeLists.txt  ros2_node.cpp  ros2_node.py
task012_ros2/_2.功能包/: _notes.md
task012_ros2/_2.功能包/demo_cpp_pkg/: CMakeLists.txt
task012_ros2/_3.WorkSpace/: notes.md
task012_ros2/_3.WorkSpace/src/cpp_ros_node/: CMakeLists.txt  package.xml
task012_ros2/_3.WorkSpace/src/cpp_ros_node/src/: cpp_node.cpp
task012_ros2/_3.WorkSpace/src/python_ros_node/: package.xml  setup.cfg  setup.py
task012_ros2/_3.WorkSpace/src/python_ros_node/python_ros_node/: python_node.py
task012_ros2/_4.面向对象编程/: python.py
task013_张正友标定/: 1.md  notes.md
task013_张正友标定/CalibrationProgram/: CMakeLists.txt  README.md  main.cpp  start.sh
task013_张正友标定/CalibrationProgram/config/: config.yaml  version.yaml
task013_张正友标定/CalibrationProgram/tools/: calibration_utils.cpp  calibration_utils.hpp  camera.cpp  camera.hpp  image_processor.cpp  image_processor.hpp  math_utils.cpp  math_utils.hpp  thread_pool.cpp  thread_pool.hpp
task013_张正友标定/notes/: notes.md  notes_.md
task014_Python/: __1.py  __2.py
task015_OpenCV/: 1____.cpp  _0__注释规范.md  _1__画基本图形.cpp  _1__画基本图形.md  _2__.md  _2__核心数据结构.cpp  _2__核心数据结构.md  _3__图像基本操作.cpp  _3__图像视频.md  _4__.cpp  __0_注释规范.md  __1_画基本图形.cpp  __1_画基本图形.md  __3_图像.md  __4_.md  z_  z_.cpp  类.cpp
task015_OpenCV/__0_注释规范/: GxIAPI.cpp  GxIAPI.hpp  _main.cpp  opencv.hpp
task016_PNP/: GX_camema.cpp
task017_多线程/: _10栅栏barrier.cpp  _11死锁.cpp  _12异步编程future与async.cpp  _13异步编程promise.cpp  _1_创建线程.md  __1创建线程.cpp  __2线程同步与mutex.cpp  __3lock_guard.cpp  __4unique_lock.cpp  __5.线程间同步方式.cpp  __6条件变量.cpp  __7读写锁.cpp  __8原子变量与原子操作.cpp  __9信号量与counting_semaphore.cpp  _生产者消费者.cpp
task017_多线程/_线程池/: main.cpp  thread_pool.cpp  thread_pool.hpp
task018_泛型编程/: 1_函数模板.cpp  2_模板函数的声明.cpp  2_模板函数的声明.hpp  3_多参数函数模板.cpp  4_引用模板函数参数.cpp
task12_ros2/_2.功能包/demo_cpp_pkg/: package.xml
task12_ros2/_2.功能包/demo_cpp_pkg/src/: demo_ros2_node.cpp
task3/: CMakeLists.txt
task6_CMAKELISTS_TXT/: 1_main.cpp  CMakeLists.txt  calculate.hpp  config.yaml
task7_yaml/: main.cpp
task8_Markdown/: 1_Markdown.md  2_LaTeX.md
task9_人工神经元/: CMakeLists.txt  main.cpp  main1_随机梯度下降.cpp  main2_批量梯度下降.cpp  main3_小批量梯度下降.cpp  note.md  notes.md
