<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_cpp_pkg</name>  <!-- 功能包名称：demo_cpp_pkg -->
  <version>0.0.0</version>
  <description>ROS 2 C++功能包示例</description>
  <maintainer email="kanganyin911@gmail.com">yinkangan</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 运行时依赖 -->
  <depend>rclcpp</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>